# test-suite

./: .coverage  .coveragerc  .gitignore  Cargo.toml  DEVELOPER_GUIDE.md  IMPLEMENTATIONS.md  IMPLEMENTATION_GUIDE.md  LINUX_PERFORMANCE_RESULTS.md  PAGES_CONFIGURATION_FIX.md  PLATFORM_LIMITATIONS.md  README.md  RELEASE_NOTES.md  SWHID_RS_PERMISSION_ISSUE_ANALYSIS.md  TODO.md  config.yaml  pyproject.toml  python_output.txt  rust_output.txt  test_symlink.txt
.github/workflows/: bisect.yml  harness.yml  test-multi-platform.yml  test-ubuntu-scheduled.yml  test-ubuntu.yml
examples/: archive_example.rs  extended_swhid_example.rs
harness/: git_manager.py  harness.py  models.py  output.py  resource_manager.py
harness/plugins/: base.py  subprocess_adapter.py
implementations/git/: implementation.py
implementations/git-cmd/: implementation.py
implementations/python/: implementation.py
implementations/ruby/: implementation.py
implementations/rust/: implementation.py
payloads/directory/edge_cases/dir_ordering/: name with space  name-with-dash  name@with@at
payloads/directory/edge_cases/dir_ordering/name/: file
payloads/directory/edge_cases/unicode_normalization/: README.md
scripts/: performance_test.py  run_performance_test.sh  view_results.py
src/: directory.rs  error.rs  lib.rs  main.rs  swhid.rs
test_harness/: README.md  config.yaml  harness.py  requirements.txt
test_harness/results/: results_20250805_164413.json  results_20250805_164424.json  results_20250805_164445.json  results_20250805_164510.json  results_20250805_164528.json  results_20250805_164558.json  results_20250805_164621.json  results_20250805_170533.json  results_20250805_170805.txt  results_20250805_170906.json  results_20250805_170910.txt  results_20250805_171011.json  results_20250805_171015.txt  results_20250805_172359.json  results_20250805_172830.json  results_20250805_173009.json  results_20250805_174919.json  results_20250805_174949.json  results_20250805_174953.json  results_20250805_175421.json
test_harness/runners/: git_cmd_runner.py  git_runner.py  pygit2_runner.py  python_runner.py  rust_runner.py
tests/: core_tests.rs  hash_computation_tests.rs
tests/integration/: test_refactored_classes.py
tests/unit/: test_harness.py  test_harness_v2.py  test_rust_v2.py  test_sha256_generation.py  test_swh_model_direct.py  test_view_results_variants.py
tools/: generate_sha256_expected.py  merge_results.py
tools/dashboard/: __init__.py  __main__.py  config.py  generator.py
tools/dashboard/assets/css/: dashboard.css
tools/dashboard/assets/js/: dashboard.js
tools/dashboard/templates/: base.html  index.html
tools/dashboard/views/: __init__.py
