[project]
name = "swhid-harness"
version = "2.0.0"
description = "Technology-neutral testing harness for SWHID implementations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    { name = "Software Heritage", email = "contact@softwareheritage.org" }
]
dependencies = [
    "PyYAML==6.0.2",
    "pydantic==2.12.0",
    "psutil==6.0.0",
    "dulwich==0.21.7",
    "pygit2>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0", 
    "pytest-mock==3.14.0",
    "ruff==0.6.9",
    "mypy==1.11.2"
]

[project.scripts]
swhid-harness = "harness.harness:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.setuptools.package-data]
harness = ["py.typed"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E266", "E501"]

[tool.pytest.ini_options]
addopts = "--tb=short -q --cov=harness --cov-report=term-missing --cov-report=html:htmlcov --cov-report=xml:coverage.xml"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["harness"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
